--- a/style.css
+++ b/style.css
@@ -114,7 +114,9 @@ header {
 }
 @media (max-width: 768px) {
     .top-nav{
+        max-width: 1%;
         margin-left: 70px;
+        margin-right: 10px;
     }
     .nav-item {
         padding: 7px 10px;
@@ -122,7 +124,7 @@ header {
     }
     .logo-container {
         padding: 0%;
-        margin-left: -10px;
+        margin-left: -5px;
     }
     .top-nav {
   gap: 5px;
