--- a/style.css
+++ b/style.css
@@ -108,21 +108,24 @@ header {
     color: #85581d;
     font-size: 0.8em;
     text-decoration: none;
+    text-align: center;
     font-weight: bold;
     box-shadow: 0px 4px 6px rgba(0,0,0,0.3);
     transition: all o.5s ease;
 }
 @media (max-width: 768px) {
     .top-nav{
-        max-width: 1%;
+        max-width: 10%;
         margin-left: 70px;
-        margin-right: 10px;
+        margin-right: 1px;
     }
     .nav-item {
-        padding: 7px 10px;
+        padding: 6px 9px;
+        border-radius: 15px;
         font-size: 0.5em; /* Smaller padding for mobile */
     }
     .logo-container {
+        max-width: 20%;
         padding: 0%;
         margin-left: -5px;
     }
