--- a/style.css
+++ b/style.css
@@ -2311,15 +2311,25 @@ body {
     object-fit: cover;
     z-index: -1;
 }
+.video-header::before {
+        content: "";
+        color: white;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; 
+        background: rgba(0, 0, 0, 0.5); /* Adds a dark overlay for text readability */
+        z-index: -1;
+    }
 
 .video-header h2 {
-    z-index: 1;
-    font-size: 2.5rem;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    margin-bottom: 100px;
-    margin-right: 100px;
-    margin-left: 2px;
-    text-align: left; 
+     font-size: 2.5rem; /* Adjust size */
+        margin-bottom: 100px;
+        margin-right: 600px;
+        text-align: left; 
+        color: white;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Subtle shadow for readability */ 
 }
 .listing10 {
         background-image: url('images/EBA8.jpg'); /* Replace with the path to your desired background image */
@@ -2418,11 +2428,11 @@ body {
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Subtle shadow for readability */
     }
 @media (max-width: 767px) {
-    .listing12, .listing10, .listng11{
+    .listing12, .listing10, .listng11, .video-header{
         height: 50vh; /* Adjust height on mobile to fit screen better */
     }
 
-    .listing12 h2, .listing10 h2, .listng11 h2{
+    .listing12 h2, .listing10 h2, .listng11 h2, .video-header h2{
         font-size: 1.8rem; /* Smaller font size for mobile */
         margin-bottom: 2px; /* Reduced margin on mobile */
         margin-top: 30px;
@@ -2431,4 +2441,8 @@ body {
         text-align: left; 
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Subtle shadow for readability */
     }
+}
+
+.video-header h2 {
+
 }
