--- a/style.css
+++ b/style.css
@@ -2290,47 +2290,7 @@ body {
 .image-grid .grid-item:hover img {
     transform: scale(1.1);
 }
-.video-header {
-    position: relative;
-    height: 70vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-align: center;
-    margin-bottom: 20px; /* Adds spacing below the video header */
-}
 
-.video-header video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}
-.video-header::before {
-        content: "";
-        color: white;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0; 
-        background: rgba(0, 0, 0, 0.5); /* Adds a dark overlay for text readability */
-        z-index: -1;
-    }
-
-.video-header h2 {
-     font-size: 2.5rem; /* Adjust size */
-        margin-bottom: 100px;
-        margin-right: 600px;
-        text-align: left; 
-        color: white;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Subtle shadow for readability */ 
-}
 .listing10 {
         background-image: url('images/EBA8.jpg'); /* Replace with the path to your desired background image */
         background-size: cover;
@@ -2427,12 +2387,45 @@ body {
         text-align: left; 
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Subtle shadow for readability */
     }
+
+    .listing9 {
+        background-image: url('images/LLV\ main.jpg'); /* Replace with the path to your desired background image */
+        background-size: cover;
+        background-position: center;
+        height: 70vh; /* Adjust height as needed */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: white; /* Text color */
+        padding: 20px;
+        position: relative;
+    } 
+
+    .listing9::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; 
+        background: rgba(0, 0, 0, 0.5); /* Adds a dark overlay for text readability */
+        z-index: 1;
+    }
+
+    .listing9 h2 {
+       font-size: 2.5rem; /* Adjust size */
+        margin-bottom: 100px;
+        margin-right: 600px;
+        text-align: left; 
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Subtle shadow for readability */
+    }
 @media (max-width: 767px) {
-    .listing12, .listing10, .listng11, .video-header{
+    .listing12, .listing10, .listng11, .listing9{
         height: 50vh; /* Adjust height on mobile to fit screen better */
     }
 
-    .listing12 h2, .listing10 h2, .listng11 h2, .video-header h2{
+    .listing12 h2, .listing10 h2, .listng11 h2, .listing9 h2{
         font-size: 1.8rem; /* Smaller font size for mobile */
         margin-bottom: 2px; /* Reduced margin on mobile */
         margin-top: 30px;
@@ -2441,8 +2434,4 @@ body {
         text-align: left; 
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Subtle shadow for readability */
     }
-}
-
-.video-header h2 {
-
 }
